--- a/client/components/Application/index.styl
+++ b/client/components/Application/index.styl
@@ -2,7 +2,7 @@
 @require 'jeet'
 @require '../../stylus-mixins/normalize'
 
-bgColor = #666
+bgColor =  #eaeaea
 txtColor = #000
 
 normalize()
@@ -15,7 +15,7 @@ body
   background-color: bgColor
   color: txtColor
 
-  font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif
+  font-family: 'Fjalla One', sans-serif
   font-weight: 300
   font-smoothing: antialiased
   text-rendering: optimizeLegibility
@@ -24,3 +24,83 @@ body
   height: 100%
   width: 100%
   position: relative
+
+  .title
+    z-index: 200
+    absolute: top left
+    padding: 5px
+    font-family: serif
+    font-size: 3rem
+    width: 150px
+    
+    &:after
+      display: block
+      margin-top: 10px
+      background-color: black
+      height: 5px
+      width: 100px
+      content: ''
+
+.forest-button
+  background-color: #9ec4c2
+  &:before
+    position: relative
+    font-size: 12px
+    content: 'Forest'
+
+.royal-button
+  background-color: #cbd1e2
+  &:before
+    position: relative
+    font-size: 12px
+    content: 'Royal'
+
+.forest
+  .window
+    fill: #cdc9C4
+    
+  .trim1
+    fill: #fff
+  
+  .trim2
+    fill: #e7e4dc
+  
+  .main1
+    fill: #9ec4c2
+  
+  .main2
+    fill: #23727a
+  
+  .shadow
+    fill: #194B4C
+  
+  .accent1
+    fill: #96acc1
+  
+  .accent2
+    fill: #b19a5b
+
+.royal
+  .window
+    fill: #cdc9C4
+    
+  .trim1
+    fill: #fff
+  
+  .trim2
+    fill: #e6e3db
+  
+  .main1
+    fill: #cbd1e2
+  
+  .main2
+    fill: #8090b2
+  
+  .shadow
+    fill: #384966
+  
+  .accent1
+    fill: #682b2b
+  
+  .accent2
+    fill: #682b2b
