--- a/client/components/Application/index.styl
+++ b/client/components/Application/index.styl
@@ -28,9 +28,10 @@ body
   .title
     z-index: 200
     absolute: top left
-    padding: 5px
+    padding-left: 10px
     font-family: serif
     font-size: 3rem
+    font-weight: 400
     width: 150px
     
     &:after
