--- a/client/components/Index/index.styl
+++ b/client/components/Index/index.styl
@@ -2,10 +2,9 @@
 @require 'jeet'
 
 .index-component
-  align()
-  height: 100%
-  width: 100%
-  
   .house
-    height: 100%
+    center()
+    max-width: 500px
+    max-height: 100%
+    height: auto
     width: 100%
