--- a/client/components/Application/index.styl
+++ b/client/components/Application/index.styl
@@ -1,4 +1,3 @@
-@require 'nib'
 @require 'jeet'
 @require '../../stylus-mixins/normalize'
 
@@ -14,6 +13,7 @@ html, body
 body
   background-color: bgColor
   color: txtColor
+  padding: 25px
 
   font-family: 'Fjalla One', sans-serif
   font-weight: 300
@@ -21,42 +21,43 @@ body
   text-rendering: optimizeLegibility
   
 .application-component
-  height: 100%
-  width: 100%
-  position: relative
+  center(max-width: 800px)
 
-  .title
-    z-index: 200
-    absolute: top left
-    padding-left: 10px
-    font-family: serif
-    font-size: 3rem
-    font-weight: 400
-    width: 150px
+  .navbar-component
+    col(3/10)
+
+  .index-component
+    col(7/10)
+
+@media screen and (max-width: 600px)
+  body
+    padding: 5px
+
+  .application-component
+    .navbar-component
+      col(1/1)
+      stack()
     
-    &:after
-      display: block
-      margin-top: 10px
-      background-color: black
-      height: 5px
-      width: 100px
-      content: ''
+    .index-component
+      col(1/1)
+      stack()
 
-.forest-button
-  background-color: #9ec4c2
-  &:before
-    position: relative
-    font-size: 12px
-    content: 'Forest'
+// skins for house
 
-.royal-button
-  background-color: #cbd1e2
-  &:before
-    position: relative
-    font-size: 12px
-    content: 'Royal'
+.window
+.trim1
+.trim2
+.main1
+.main2
+.shadow
+.accent1
+.accent2
+  transition: fill 0.2s ease
 
-.forest
+.marina-button
+  background-color: #23727A
+
+.marina
   .window
     fill: #cdc9C4
     
@@ -64,24 +65,27 @@ body
     fill: #fff
   
   .trim2
-    fill: #e7e4dc
+    fill: #E6E3DB
   
   .main1
-    fill: #9ec4c2
+    fill: #9EC4C2
   
   .main2
-    fill: #23727a
+    fill: #23727A
   
   .shadow
-    fill: #194B4C
+    fill: #184B4C
   
   .accent1
-    fill: #96acc1
+    fill: #96ACC1
   
   .accent2
-    fill: #b19a5b
+    fill: #B19A5A
+    
+.dolores-button
+  background-color: #8090B2
 
-.royal
+.dolores
   .window
     fill: #cdc9C4
     
@@ -89,19 +93,131 @@ body
     fill: #fff
   
   .trim2
-    fill: #e6e3db
+    fill: #E6E3DB
   
   .main1
-    fill: #cbd1e2
+    fill: #9EC4C2
   
   .main2
-    fill: #8090b2
+    fill: #8090B2
   
   .shadow
     fill: #384966
   
   .accent1
-    fill: #682b2b
+    fill: #682B2B
   
   .accent2
-    fill: #682b2b
+    fill: #682B2B
+    
+.lombard-button
+  background-color: #90C091
+
+.lombard
+  .window
+    fill: #cdc9C4
+    
+  .trim1
+    fill: #0D5C62
+  
+  .trim2
+    fill: #D3E1D2
+  
+  .main1
+    fill: #F7F8E5
+  
+  .main2
+    fill: #E0E0CE
+  
+  .shadow
+    fill: #073E3F
+  
+  .accent1
+    fill: #90C091
+  
+  .accent2
+    fill: #D6CB60
+
+.haight-button
+  background-color: #D78C54
+
+.haight
+  .window
+    fill: #cdc9C4
+    
+  .trim1
+    fill: #EAD3B2
+  
+  .trim2
+    fill: #D5BD94
+  
+  .main1
+    fill: #D78C54
+  
+  .main2
+    fill: #BC6931
+
+  .shadow
+    fill: #6A2211
+  
+  .accent1
+    fill: #52868F
+  
+  .accent2
+    fill: #9B361F
+    
+.alamo-button
+  background-color: #D24D45
+
+.alamo
+  .window
+    fill: #cdc9C4
+    
+  .trim1
+    fill: #fff
+  
+  .trim2
+    fill: #D6D6D5
+  
+  .main1
+    fill: #F8D587
+  
+  .main2
+    fill: #E9BE66
+
+  .shadow
+    fill: #565449
+  
+  .accent1
+    fill: #D24D45
+  
+  .accent2
+    fill: #BA2E26
+    
+.castro-button
+  background-color: #CBA2CB
+
+.castro
+  .window
+    fill: #cdc9C4
+    
+  .trim1
+    fill: #fff
+  
+  .trim2
+    fill: #DBD1D9
+  
+  .main1
+    fill: #8194E2
+  
+  .main2
+    fill: #556EBF
+
+  .shadow
+    fill: #3D3381
+  
+  .accent1
+    fill: #CBA2CB
+  
+  .accent2
+    fill: #FEC352
